# ros2_nist_training_pkg

./: README.md
av_demo/: package.xml  setup.cfg  setup.py
av_demo/av_demo/: av_demo_camera.py  av_demo_server.py
av_demo/config/: params.yaml
av_demo/launch/: av_demo.launch.py
first_package/: package.xml  setup.py
first_package/first_package/: advanced_publisher.py  minimal_publisher.py  simple_interface.py  simple_node.py  subscriber.py
first_package/launch/: first_package_1.launch.py  first_package_2.launch.py
first_package_py/: package.xml  setup.cfg  setup.py
first_package_py/first_package_py/: advanced_publisher.py  minimal_publisher.py  simple_node.py  subscriber.py
interface_demo/: package.xml  setup.cfg  setup.py
interface_demo/interface_demo/: callback_group_interface.py  client_server_interface.py  interface_demo.py  weather_interface.py
nist_msgs/: CMakeLists.txt  package.xml
nist_msgs/msg/: WeatherStation.msg
nist_msgs/srv/: AddTwoInts.srv
parameter_demo/: package.xml  setup.cfg  setup.py
parameter_demo/config/: params.yaml
parameter_demo/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
parameter_demo/config/log/: latest_build
parameter_demo/launch/: parameter_demo.launch.py
parameter_demo/parameter_demo/: parameter_demo_interface.py
